# C-PSSA_Service

PSSA_Service/: CMakeLists.txt  main.cpp
PSSA_Service/AppManager/: CMakeLists.txt  appmanager.cpp
PSSA_Service/FifoQueue/: CMakeLists.txt  FifoQueue.h
PSSA_Service/ILogger/: ILogger.h
PSSA_Service/LoggerCon/: CMakeLists.txt  LoggerCon.cpp  LoggerCon.h
PSSA_Service/LoggerPSAA/: CMakeLists.txt  Logger.cpp  Logger.h
PSSA_Service/Producer/: CMakeLists.txt  Producer.cpp  Producer.h
